--- a/src/app/layout/navbar/container/navbar.component.html
+++ b/src/app/layout/navbar/container/navbar.component.html
@@ -26,7 +26,7 @@
     >
       <a class="mr-5 hover:text-gray-900" routerLink="/">Home</a>
       <a class="mr-5 hover:text-gray-900" routerLink="/posts">Posts</a>
-      <a class="mr-5 hover:text-gray-900">Third Link</a>
+      <a class="mr-5 hover:text-gray-900" routerLink="/products">products</a>
       <a class="mr-5 hover:text-gray-900">Fourth Link</a>
     </nav>
     <button
