--- a/src/app/layout/navbar/container/navbar.component.html
+++ b/src/app/layout/navbar/container/navbar.component.html
@@ -4,7 +4,8 @@
   >
     <a
       class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0"
-    >
+      routerLink="/"
+      >
       <svg
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
@@ -19,31 +20,15 @@
           d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"
         ></path>
       </svg>
-      <span class="ml-3 text-xl">Tailblocks</span>
+      <span class="ml-3 text-xl">salah dev</span>
     </a>
     <nav
       class="md:ml-auto flex flex-wrap items-center text-base justify-center"
     >
-      <a class="mr-5 hover:text-gray-900" routerLink="/">Home</a>
-      <a class="mr-5 hover:text-gray-900" routerLink="/posts">Posts</a>
-      <a class="mr-5 hover:text-gray-900" routerLink="/products">products</a>
-      <a class="mr-5 hover:text-gray-900">Fourth Link</a>
+    <a class="mr-5 hover:text-gray-900" routerLink="/"  [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">Home</a>
+    <a class="mr-5 hover:text-gray-900" routerLink="/posts" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">Posts</a>
+      <a class="mr-5 hover:text-gray-900" routerLink="/products" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">products</a>
+      <a class="mr-5 hover:text-gray-900" routerLink="/form" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active" >form</a>
     </nav>
-    <button
-      class="inline-flex items-center bg-gray-100 border-0 py-1 px-3 focus:outline-none hover:bg-gray-200 rounded text-base mt-4 md:mt-0"
-    >
-      Button
-      <svg
-        fill="none"
-        stroke="currentColor"
-        stroke-linecap="round"
-        stroke-linejoin="round"
-        stroke-width="2"
-        class="w-4 h-4 ml-1"
-        viewBox="0 0 24 24"
-      >
-        <path d="M5 12h14M12 5l7 7-7 7"></path>
-      </svg>
-    </button>
   </div>
 </header>
