--- a/src/app/modules/posts/container/posts.component.html
+++ b/src/app/modules/posts/container/posts.component.html
@@ -1,1 +1,6 @@
-<p>posts works!</p>
+<h1>salah test</h1>
+<div *ngFor="let post of posts">
+    <h2>{{ post.title }}</h2>
+    <p>{{ post.body }}</p>
+  </div>
+  
