--- a/src/app/modules/form/container/form.component.html
+++ b/src/app/modules/form/container/form.component.html
@@ -37,4 +37,12 @@
       Submit
     </button>
   </form>
+
+  <!-- Success Message -->
+  <div
+    *ngIf="successMessage"
+    class="mt-4 p-4 bg-green-100 text-green-800 border border-green-200 rounded-lg"
+  >
+    {{ successMessage }}
+  </div>
 </div>
