--- a/src/app/layout/navbar/container/navbar.component.html
+++ b/src/app/layout/navbar/container/navbar.component.html
@@ -29,6 +29,8 @@
     <a class="mr-5 hover:text-gray-900" routerLink="/posts" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">Posts</a>
       <a class="mr-5 hover:text-gray-900" routerLink="/products" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">products</a>
       <a class="mr-5 hover:text-gray-900" routerLink="/form" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active" >form</a>
+      <a class="mr-5 hover:text-gray-900" routerLink="/result" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active" >result</a>
+
     </nav>
   </div>
 </header>
