--- a/src/app/modules/home/components/form/form.component.html
+++ b/src/app/modules/home/components/form/form.component.html
@@ -1,6 +1,12 @@
 <div class="container mx-auto p-4">
   <h1 class="text-2xl font-bold mb-4">Register Form</h1>
-
+  <div>
+    <input #inputField placeholder="Enter some text" />
+    <button (click)="sendText(inputField)">Send Text</button>
+  </div>
+  
+  
+  
   <form
     class="max-w-md mx-auto bg-white p-6 shadow-md rounded-lg"
   >
