--- a/src/app/modules/home/components/form/form.component.html
+++ b/src/app/modules/home/components/form/form.component.html
@@ -1,5 +1,7 @@
 <div class="mb-4">
-  <label for="input1" class="block text-gray-700 font-bold mb-2">Input 1:</label>
+  <h1 class="text-2xl font-bold mb-4">user Form</h1>
+
+  <label for="input1" class="block text-gray-700 font-bold mb-2">your name:</label>
   <input
     id="input1"
     type="text"
@@ -10,7 +12,7 @@
 </div>
 
 <div class="mb-4">
-  <label for="input2" class="block text-gray-700 font-bold mb-2">Input 2:</label>
+  <label for="input2" class="block text-gray-700 font-bold mb-2">your age:</label>
   <input
     id="input2"
     type="text"
