--- a/src/app/modules/home/container/home.component.html
+++ b/src/app/modules/home/container/home.component.html
@@ -1,7 +1,11 @@
-<section class="container px-5 py-16 mx-auto flex items-center">
-  <!-- Pass homevariable to ResultFormComponent -->
-  <app-resultform [resultvariable]="homevariable"></app-resultform>
+<section class="container px-5 py-16 mx-auto flex items-center justify-between">
+  <!-- Left Component -->
+  <div class="w-1/2">
+    <app-resultform [resultvariable]="homevariable"></app-resultform>
+  </div>
 
-  <!-- Pass form data from FormComponent to HomeComponent via event binding -->
-  <app-form (formSubmitted)="handleFormSubmit($event)"></app-form>
+  <!-- Right Component -->
+  <div class="w-1/4">
+    <app-form (formSubmitted)="handleFormSubmit($event)"></app-form>
+  </div>
 </section>
