--- a/src/app/modules/home/components/resultform/resultform.component.html
+++ b/src/app/modules/home/components/resultform/resultform.component.html
@@ -11,4 +11,6 @@
       {{ resultvariable.input2 }}
     </span>
   </p>
+  <h1>Purchases from {{ company | titlecase }} on {{ purchasedOn | date }}</h1>
+<p>Total: {{ amount | currency }}</p>
 </div>
