add ngmodel and make model big

--- a/src/app/modules/result/container/Result.component.html
+++ b/src/app/modules/result/container/Result.component.html
@@ -1,4 +1,4 @@
-<div class="container mx-auto p-4">
+<div class="mx-auto p-20 pt-6">
   <h2 class="text-2xl font-bold mb-4 text-gray-800">User List</h2>
   <div class="overflow-x-auto">
     <table class="w-full text-left table-auto border-collapse bg-white shadow-md rounded-lg">
@@ -7,6 +7,8 @@
           <th class="px-6 py-3 text-gray-700 font-semibold border-b">ID</th>
           <th class="px-6 py-3 text-gray-700 font-semibold border-b">Name</th>
           <th class="px-6 py-3 text-gray-700 font-semibold border-b">Email</th>
+          <th class="px-6 py-3 text-gray-700 font-semibold border-b">address</th>
+          <th class="px-6 py-3 text-gray-700 font-semibold border-b">phone</th>
           <th class="px-6 py-3 text-gray-700 font-semibold border-b text-center">Action</th>
         </tr>
       </thead>
@@ -15,6 +17,8 @@
           <td class="px-6 py-3 border-b text-gray-600">{{ user.id }}</td>
           <td class="px-6 py-3 border-b text-gray-600">{{ user.name }}</td>
           <td class="px-6 py-3 border-b text-gray-600">{{ user.email }}</td>
+          <td class="px-6 py-3 border-b text-gray-600">{{ user.address }}</td>
+          <td class="px-6 py-3 border-b text-gray-600">{{ user.phone }}</td>
           <td class="px-6 py-3 border-b text-center">
             <button
               (click)="deleteUser(user.id)"
