--- a/src/app/layout/navbar/container/navbar.component.html
+++ b/src/app/layout/navbar/container/navbar.component.html
@@ -30,6 +30,7 @@
       <a class="mr-5 hover:text-gray-900" routerLink="/products" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">products</a>
       <a class="mr-5 hover:text-gray-900" routerLink="/form" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active" >form</a>
       <a class="mr-5 hover:text-gray-900" routerLink="/result" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active" >result</a>
+      <a class="mr-5 hover:text-gray-900" routerLink="/edit" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active" >Edit</a>
 
     </nav>
   </div>
