--- a/src/app/modules/result/container/Result.component.html
+++ b/src/app/modules/result/container/Result.component.html
@@ -26,6 +26,13 @@
             >
               Delete
             </button>
+            <button
+            (click)="navigateToEdit(user)"
+            title="Edit User"
+            class="bg-blue-500 text-white px-4 py-2 ml-4 rounded-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-offset-2"
+          >
+            Edit
+          </button>
           </td>
         </tr>
       </tbody>
