--- a/src/app/modules/home/components/resultform/resultform.component.html
+++ b/src/app/modules/home/components/resultform/resultform.component.html
@@ -11,38 +11,19 @@
       {{ resultvariable.input2 }}
     </span>
   </p>
-  <h1>Purchases from 
-    {{ company | titlecase }}
-     on 
-     {{ purchasedOn | date }}
-    </h1>
-<p>Total: 
-  {{ amount | currency }}</p>
-</div>
 
 
 
+  <p> pipes {{ number | monny }}</p>  <!-- Output: 123.45  -->
 
-<h1 class="text-2xl font-bold mb-4">{{elementsh2}}</h1>
-
-<div>
-  <input
-  class=" px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
-
-  type="text" #taginput>
-  <button 
-
-  class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5"
-
-  (click)="buttonfunction(taginput.value)">button input</button>
-</div>
+  <p>pipes {{ text | star }}</p>  <!-- Output: 123.45  -->
 
 <h1 class="text-2xl font-bold mb-4">{{elementshtow}}</h1>
 
 <div>
   <input
   class=" px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
-
-  type="text" [(ngModel)]="elementshtow">
+  type="text" [(ngModel)]="elementshtow"
+  placeholder="Write here anything">
 
 </div>
