--- a/src/app/modules/home/components/form/form.component.html
+++ b/src/app/modules/home/components/form/form.component.html
@@ -1,31 +1,45 @@
 <div class="mb-4">
   <h1 class="text-2xl font-bold mb-4">user Form</h1>
 
-  <label for="input1" class="block text-gray-700 font-bold mb-2">your name:</label>
-  <input
-    id="input1"
-    type="text"
-    [(ngModel)]="person.name"
-    required
-    class="mb-4 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-  />
-</div>
-
-<div class="mb-4">
-  <label for="input2" class="block text-gray-700 font-bold mb-2">your age:</label>
-  <input
-    id="input2"
-    type="text"
-    [(ngModel)]="person.age"
-    required
-    class="mb-4 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-  />
-</div>
-
-<!-- Submit button triggers the submitForm() method -->
-<button
-  (click)="submitForm()"
-  class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5"
->
-  Submit
-</button>
+  <form class="example-form">
+    <label for="input1" class="block text-gray-700 font-bold mb-2">Your Name:</label>
+    <mat-form-field class="example-full-width">
+      <mat-label>Your Name</mat-label>
+      <input
+        matInput
+        placeholder="Ex. John Doe"
+        type="text"
+        id="input1"
+        [(ngModel)]="person.name"
+        name="name"
+        required
+        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+      />
+    </mat-form-field>
+  
+    <label for="input2" class="block text-gray-700 font-bold mb-2">Your Age:</label>
+    <mat-form-field class="example-full-width">
+      <mat-label>Your Age</mat-label>
+      <input
+        matInput
+        id="input2"
+        type="number"
+        [(ngModel)]="person.age"
+        name="age"
+        placeholder="Ex. 25"
+        required
+        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+      />
+    </mat-form-field>
+  
+    <button
+      class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5"
+      mat-raised-button
+      color="primary"
+      type="button"
+      (click)="submitForm()"
+    >
+      Submit
+    </button>
+  </form>
+</div>  
