--- a/src/app/modules/home/components/form/form.component.html
+++ b/src/app/modules/home/components/form/form.component.html
@@ -1,7 +1,9 @@
 <div class="mb-4">
   <h1 class="text-2xl font-bold mb-4">user Form</h1>
 
-  <form class="example-form">
+  <form 
+  class="max-w-md mx-auto bg-white p-6 shadow-md rounded-lg border border-gray-300"
+  >
     <label for="input1" class="block text-gray-700 font-bold mb-2">Your Name:</label>
     <mat-form-field class="example-full-width">
       <mat-label>Your Name</mat-label>
