--- a/src/app/modules/form/container/form.component.html
+++ b/src/app/modules/form/container/form.component.html
@@ -1,54 +1,41 @@
+<!-- Angular Material Form -->
 <div class="container mx-auto p-4">
-  <h1 class="text-2xl font-bold mb-4">Register Form</h1>
+  <h1 class="text-2xl font-bold mb-4 text-center">Register Form</h1>
 
   <form
     [formGroup]="myForm"
     (ngSubmit)="onSubmit()"
-    class="max-w-md mx-auto bg-white p-6 shadow-md rounded-lg"
-  >
+    class="max-w-md mx-auto bg-white p-6 shadow-md rounded-lg border border-gray-300"
+    >
     <!-- Name Field -->
-    <div class="mb-4">
-      <label for="name" class="block text-gray-700 font-semibold mb-2">Name:</label>
-      <input
-        type="text"
-        id="name"
-        formControlName="name"
-        class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
-      />
-    </div>
+    <mat-form-field  class="full-width mb-4 ">
+      <mat-label>Name</mat-label>
+      <input matInput formControlName="name" />
+    </mat-form-field>
 
     <!-- Email Field -->
-    <div class="mb-4">
-      <label for="email" class="block text-gray-700 font-semibold mb-2">Email:</label>
-      <input
-        type="email"
-        id="email"
-        formControlName="email"
-        class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
-      />
-    </div>
-
+    <mat-form-field class="full-width mb-4">
+      <mat-label>Email</mat-label>
+      <input matInput formControlName="email" type="email" />
+      <mat-error *ngIf="myForm.controls['email'].hasError('pattern')">
+        Please enter a valid email in the format example&#64;example.com.
+      </mat-error>
+    </mat-form-field>
+    
+    
+    
+    
     <!-- Address Field -->
-    <div class="mb-4">
-      <label for="address" class="block text-gray-700 font-semibold mb-2">Address:</label>
-      <input
-        type="text"
-        id="address"
-        formControlName="address"
-        class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
-      />
-    </div>
+    <mat-form-field class="full-width mb-4">
+      <mat-label>Address</mat-label>
+      <input matInput formControlName="address" />
+    </mat-form-field>
 
     <!-- Phone Number Field -->
-    <div class="mb-4">
-      <label for="phone" class="block text-gray-700 font-semibold mb-2">Phone Number:</label>
-      <input
-        type="text"
-        id="phone"
-        formControlName="phone"
-        class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent"
-      />
-    </div>
+    <mat-form-field class="full-width mb-4">
+      <mat-label>Phone Number</mat-label>
+      <input matInput formControlName="phone" />
+    </mat-form-field>
 
     <!-- Submit Button -->
     <button
