--- a/src/app/modules/posts/container/posts.component.html
+++ b/src/app/modules/posts/container/posts.component.html
@@ -1,8 +1,11 @@
 <div class="container mx-auto p-4">
+
   <h1 class="text-2xl font-bold mb-4">Posts</h1>
 
   <!-- Loading Spinner -->
   <div *ngIf="loading" class="text-center">
+    <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+
     <p>Loading Posts...</p>
   </div>
 
