--- a/src/app/modules/products/container/products.component.html
+++ b/src/app/modules/products/container/products.component.html
@@ -3,6 +3,8 @@
   
     <!-- Loading Spinner -->
     <div *ngIf="loading" class="text-center">
+      <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+
       <p>Loading products...</p>
     </div>
   
