--- a/src/app/modules/result/container/Result.component.html
+++ b/src/app/modules/result/container/Result.component.html
@@ -7,32 +7,69 @@
           <th class="px-6 py-3 text-gray-700 font-semibold border-b">ID</th>
           <th class="px-6 py-3 text-gray-700 font-semibold border-b">Name</th>
           <th class="px-6 py-3 text-gray-700 font-semibold border-b">Email</th>
-          <th class="px-6 py-3 text-gray-700 font-semibold border-b">address</th>
-          <th class="px-6 py-3 text-gray-700 font-semibold border-b">phone</th>
+          <th class="px-6 py-3 text-gray-700 font-semibold border-b">Address</th>
+          <th class="px-6 py-3 text-gray-700 font-semibold border-b">Phone</th>
           <th class="px-6 py-3 text-gray-700 font-semibold border-b text-center">Action</th>
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let user of users" class="hover:bg-gray-50">
+        <tr *ngFor="let user of users; let i = index" class="hover:bg-gray-50">
           <td class="px-6 py-3 border-b text-gray-600">{{ user.id }}</td>
-          <td class="px-6 py-3 border-b text-gray-600">{{ user.name }}</td>
-          <td class="px-6 py-3 border-b text-gray-600">{{ user.email }}</td>
-          <td class="px-6 py-3 border-b text-gray-600">{{ user.address }}</td>
-          <td class="px-6 py-3 border-b text-gray-600">{{ user.phone }}</td>
+
+          <!-- Inline Editing for Name -->
+          <td class="px-6 py-3 border-b text-gray-600">
+            <ng-container *ngIf="editingUserId !== user.id">
+              {{ user.name }}
+            </ng-container>
+            <ng-container *ngIf="editingUserId === user.id">
+              <input [(ngModel)]="user.name" class="px-3 py-2 border rounded-md" />
+            </ng-container>
+          </td>
+
+          <!-- Inline Editing for Email -->
+          <td class="px-6 py-3 border-b text-gray-600">
+            <ng-container *ngIf="editingUserId !== user.id">
+              {{ user.email }}
+            </ng-container>
+            <ng-container *ngIf="editingUserId === user.id">
+              <input [(ngModel)]="user.email" class="px-3 py-2 border rounded-md" />
+            </ng-container>
+          </td>
+
+          <!-- Inline Editing for Address -->
+          <td class="px-6 py-3 border-b text-gray-600">
+            <ng-container *ngIf="editingUserId !== user.id">
+              {{ user.address }}
+            </ng-container>
+            <ng-container *ngIf="editingUserId === user.id">
+              <input [(ngModel)]="user.address" class="px-3 py-2 border rounded-md" />
+            </ng-container>
+          </td>
+
+          <!-- Inline Editing for Phone -->
+          <td class="px-6 py-3 border-b text-gray-600">
+            <ng-container *ngIf="editingUserId !== user.id">
+              {{ user.phone }}
+            </ng-container>
+            <ng-container *ngIf="editingUserId === user.id">
+              <input [(ngModel)]="user.phone" class="px-3 py-2 border rounded-md" />
+            </ng-container>
+          </td>
+
           <td class="px-6 py-3 border-b text-center">
             <button
               (click)="deleteUser(user.id)"
-              class="bg-red-500 text-white px-4 py-2 rounded-md hover:bg-red-600 focus:outline-none focus:ring-2 focus:ring-red-400 focus:ring-offset-2"
+              class="bg-red-500 text-white px-2 py-2 rounded-md hover:bg-red-600 focus:outline-none focus:ring-2 focus:ring-red-400 focus:ring-offset-2"
             >
               Delete
             </button>
             <button
-            (click)="navigateToEdit(user)"
-            title="Edit User"
-            class="bg-blue-500 text-white px-4 py-2 ml-4 rounded-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-offset-2"
-          >
-            Edit
-          </button>
+              (click)="toggleEdit(user)"
+              title="Edit User"
+              class="bg-blue-500 text-white px-2 py-2 ml-4 rounded-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-offset-2"
+            >
+              {{ editingUserId === user.id ? 'Save' : 'Edit' }}
+            </button>
           </td>
         </tr>
       </tbody>
