--- a/src/app/modules/home/components/resultform/resultform.component.html
+++ b/src/app/modules/home/components/resultform/resultform.component.html
@@ -35,3 +35,68 @@
     />
   </mat-form-field>
 </div>
+
+<div class="flex flex-col items-center justify-center bg-gray-100">
+ 
+  <div class="bg-white rounded-lg p-6 w-80 text-center">
+    <h1 class="title-font font-medium text-3xl text-gray-900">
+      hadi b signal
+        </h1>
+    <h1 class="text-3xl font-bold text-gray-800 mb-4">Counter: {{ counter() }}</h1>
+    <div class="space-y-2">
+      <button
+        (click)="increment()"
+        class="w-full bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 focus:ring-2 focus:ring-blue-400 focus:outline-none"
+      >
+        Increment
+      </button>
+      <button
+        (click)="decrement()"
+        class="w-full bg-red-500 text-white py-2 px-4 rounded-lg hover:bg-red-600 focus:ring-2 focus:ring-red-400 focus:outline-none"
+      >
+        Decrement
+      </button>
+      <button
+        (click)="reset()"
+        class="w-full bg-gray-500 text-white py-2 px-4 rounded-lg hover:bg-gray-600 focus:ring-2 focus:ring-gray-400 focus:outline-none"
+      >
+        Reset
+      </button>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+<div class="flex flex-col items-center justify-center  bg-gray-100">
+  <h1 class="title-font font-medium text-3xl text-gray-900">
+hadi bla signal
+  </h1>
+  <h1 class="text-4xl font-bold text-gray-800 mb-6">
+    Current Value: <span class="text-blue-500">{{ currentValue }}</span>
+  </h1>
+  <div class="flex gap-4">
+    <button
+      (click)="increaseValue()"
+      class="px-6 py-2 bg-green-500 text-white rounded-lg shadow hover:bg-green-600 transition"
+    >
+      Increase
+    </button>
+    <button
+      (click)="decreaseValue()"
+      class="px-6 py-2 bg-red-500 text-white rounded-lg shadow hover:bg-red-600 transition"
+    >
+      Decrease
+    </button>
+    <button
+      (click)="resetValue()"
+      class="px-6 py-2 bg-gray-500 text-white rounded-lg shadow hover:bg-gray-600 transition"
+    >
+      Reset
+    </button>
+  </div>
+</div>
