add new version

--- a/src/app/layout/navbar/container/navbar.component.html
+++ b/src/app/layout/navbar/container/navbar.component.html
@@ -18,6 +18,7 @@
       <a class="mr-5 hover:text-gray-900" routerLink="/products" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">products</a>
       <a class="mr-5 hover:text-gray-900" routerLink="/form" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active" >form</a>
       <a class="mr-5 hover:text-gray-900" routerLink="/result" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active" >result</a>
+      <a class="mr-5 hover:text-gray-900" routerLink="/exam" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active" >exam</a>
 
     </nav>
   </div>
