--- a/src/app/modules/exam/container/Exam.component.html
+++ b/src/app/modules/exam/container/Exam.component.html
@@ -1,1 +1,6 @@
-<h1>here is exam componet </h1>
+
+<div class="container mx-auto p-4">
+    <p> pipes {{ number | monny }}</p> <!-- Output: 123.45  -->
+    <div>
+    <p>pipes {{ text | star }}</p> <!-- Output: 123.45  -->
+</div>    
