--- a/src/app/modules/exam/container/Exam.component.html
+++ b/src/app/modules/exam/container/Exam.component.html
@@ -1,6 +1,9 @@
+<div class="flex justify-between">
+  <app-sum class="w-1/2"></app-sum>
+  <app-division class="w-1/2"></app-division>
+</div>
+<div class="flex justify-between">
+<app-multiplication class="w-1/2"></app-multiplication>
+<app-subtraction class="w-1/2"></app-subtraction>
 
-<div class="container mx-auto p-4">
-    <p> pipes {{ number | monny }}</p> <!-- Output: 123.45  -->
-    <div>
-    <p>pipes {{ text | star }}</p> <!-- Output: 123.45  -->
-</div>    
+</div>
