new version chnage type scripte

--- a/src/app/layout/navbar/container/navbar.component.html
+++ b/src/app/layout/navbar/container/navbar.component.html
@@ -5,22 +5,67 @@
     <a
       class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0"
       routerLink="/"
-      >
-      <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="computer"></mat-icon>
+    >
+      <mat-icon
+        aria-hidden="false"
+        aria-label="Example home icon"
+        fontIcon="computer"
+      ></mat-icon>
 
       <span class="ml-3 text-xl">salah dev</span>
     </a>
     <nav
       class="md:ml-auto flex flex-wrap items-center text-base justify-center"
     >
-    <a class="mr-5 hover:text-gray-900" routerLink="/"  [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">Home</a>
-    <a class="mr-5 hover:text-gray-900" routerLink="/posts" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">Posts</a>
-      <a class="mr-5 hover:text-gray-900" routerLink="/products" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active">products</a>
-      <a class="mr-5 hover:text-gray-900" routerLink="/form" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active" >form</a>
-      <a class="mr-5 hover:text-gray-900" routerLink="/result" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active" >result</a>
-      <a class="mr-5 hover:text-gray-900" routerLink="/exam" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active" >exam</a>
-      <a class="mr-5 hover:text-gray-900" routerLink="/resultexam" [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active" >exam result</a>
-
+      <a
+        class="mr-5 hover:text-gray-900"
+        routerLink="/"
+        [routerLinkActiveOptions]="{ exact: true }"
+        routerLinkActive="active"
+        >Home</a
+      >
+      <a
+        class="mr-5 hover:text-gray-900"
+        routerLink="/posts"
+        [routerLinkActiveOptions]="{ exact: true }"
+        routerLinkActive="active"
+        >Posts</a
+      >
+      <a
+        class="mr-5 hover:text-gray-900"
+        routerLink="/products"
+        [routerLinkActiveOptions]="{ exact: true }"
+        routerLinkActive="active"
+        >products</a
+      >
+      <a
+        class="mr-5 hover:text-gray-900"
+        routerLink="/form"
+        [routerLinkActiveOptions]="{ exact: true }"
+        routerLinkActive="active"
+        >form</a
+      >
+      <a
+        class="mr-5 hover:text-gray-900"
+        routerLink="/result"
+        [routerLinkActiveOptions]="{ exact: true }"
+        routerLinkActive="active"
+        >result</a
+      >
+      <a
+        class="mr-5 hover:text-gray-900"
+        routerLink="/exam"
+        [routerLinkActiveOptions]="{ exact: true }"
+        routerLinkActive="active"
+        >exam</a
+      >
+      <a
+        class="mr-5 hover:text-gray-900"
+        routerLink="/resultexam"
+        [routerLinkActiveOptions]="{ exact: true }"
+        routerLinkActive="active"
+        >exam result</a
+      >
     </nav>
   </div>
 </header>
