--- a/src/app/modules/home/components/resultform/resultform.component.html
+++ b/src/app/modules/home/components/resultform/resultform.component.html
@@ -11,12 +11,18 @@
       {{ resultvariable.input2 }}
     </span>
   </p>
-  <h1 class="text-2xl font-bold mb-4">{{elementshtow}}</h1>
+  <h1 class="text-2xl font-bold mb-4">{{ elementshtow }}</h1>
 
   <div>
-
-    <mat-form-field class="example-full-width ">
-      <input matInput id="input2" type="text" [(ngModel)]="elementshtow" placeholder="Write here anything"
-        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" />
+    <mat-form-field class="example-full-width">
+      <input
+        matInput
+        id="input2"
+        type="text"
+        [(ngModel)]="elementshtow"
+        placeholder="Write here anything"
+        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+      />
     </mat-form-field>
   </div>
+</div>
