--- a/src/app/modules/result-exam/container/resultexam.component.html
+++ b/src/app/modules/result-exam/container/resultexam.component.html
@@ -15,6 +15,7 @@
   </p>
   <!-- Optionally, display subSum if you want to show the temporary sum -->
   <p *ngIf="multiple !== null" class="text-lg font-semibold">
-    Temporary multiplication  : <span class="text-green-500">{{ multiple }}</span>
+    Temporary multiplication :
+    <span class="text-green-500">{{ multiple }}</span>
   </p>
 </div>
