--- a/src/app/layout/navbar/container/navbar.component.scss
+++ b/src/app/layout/navbar/container/navbar.component.scss
@@ -1,5 +1,8 @@
 .active {
-    border-bottom: 2px solid #7c3aed;
-    transform: scale(1.1);
-    transition: border-bottom 0.3s ease , color 0.3s ease , transform 0.3s ease;}
-    
+  border-bottom: 2px solid #7c3aed;
+  transform: scale(1.1);
+  transition:
+    border-bottom 0.3s ease,
+    color 0.3s ease,
+    transform 0.3s ease;
+}
