--- a/src/app/modules/exam/components/sum/sum.component.html
+++ b/src/app/modules/exam/components/sum/sum.component.html
@@ -1,4 +1,6 @@
-<div class="container mx-auto p-4 bg-gray-100 min-h-screen flex items-center justify-center">
+<div
+  class="container mx-auto p-4 bg-gray-100 min-h-screen flex items-center justify-center"
+>
   <div class="bg-white shadow-lg rounded-lg p-6 w-full max-w-md">
     <h2 class="text-2xl font-bold text-center text-gray-800 mb-4">
       Random Number Sum Game
