--- a/src/app/modules/home/components/form/form.component.html
+++ b/src/app/modules/home/components/form/form.component.html
@@ -1,10 +1,12 @@
 <div class="mb-4">
   <h1 class="text-2xl font-bold mb-4">user Form</h1>
 
-  <form 
-  class="max-w-md mx-auto bg-white p-6 shadow-md rounded-lg border border-gray-300"
+  <form
+    class="max-w-md mx-auto bg-white p-6 shadow-md rounded-lg border border-gray-300"
   >
-    <label for="input1" class="block text-gray-700 font-bold mb-2">Your Name:</label>
+    <label for="input1" class="block text-gray-700 font-bold mb-2"
+      >Your Name:</label
+    >
     <mat-form-field class="example-full-width">
       <mat-label>Your Name</mat-label>
       <input
@@ -18,8 +20,10 @@
         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
       />
     </mat-form-field>
-  
-    <label for="input2" class="block text-gray-700 font-bold mb-2">Your Age:</label>
+
+    <label for="input2" class="block text-gray-700 font-bold mb-2"
+      >Your Age:</label
+    >
     <mat-form-field class="example-full-width">
       <mat-label>Your Age</mat-label>
       <input
@@ -33,7 +37,7 @@
         class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
       />
     </mat-form-field>
-  
+
     <button
       class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5"
       mat-raised-button
@@ -44,5 +48,4 @@
       Submit
     </button>
   </form>
-</div>  
-
+</div>
