--- a/src/app/modules/posts/container/posts.component.html
+++ b/src/app/modules/posts/container/posts.component.html
@@ -1,5 +1,4 @@
 <div class="container mx-auto p-4">
-
   <h1 class="text-2xl font-bold mb-4">Posts</h1>
 
   <!-- Loading Spinner -->
@@ -35,7 +34,10 @@
   </div>
 
   <!-- No Products -->
-  <div *ngIf="!loading && !error && posts.length === 0" class="text-center text-gray-500">
+  <div
+    *ngIf="!loading && !error && posts.length === 0"
+    class="text-center text-gray-500"
+  >
     <p>No Posts available.</p>
   </div>
 </div>
